# tockloader-rs

./: .gitignore  COPYRIGHT  Cargo.toml  LICENSE-MIT  Makefile  README.md
.github/workflows/: rust.yml
tbf-parser/src/: parse.rs  types.rs
tbf-parser/tests/: parse.rs
tock-process-console/: .gitignore  Cargo.toml
tock-process-console/src/: lib.rs  termination.rs
tock-process-console/src/board/: connection.rs  decoder.rs  event.rs  mod.rs
tock-process-console/src/state_store/: action.rs  mod.rs  state.rs  state_store.rs  state_store_process.rs
tock-process-console/src/ui_management/: mod.rs  ui_manager.rs
tock-process-console/src/ui_management/components/: component.rs  input_box.rs  mod.rs  output_box.rs
tock-process-console/src/ui_management/pages/: mod.rs
tock-process-console/src/ui_management/pages/setup_page/: mod.rs  setup_page.rs  setup_page_structure.rs
tock-process-console/src/ui_management/pages/terminal_page/: applications_page.rs  main_page.rs  mod.rs
tock-process-console/src/ui_management/pages/terminal_page/components/: apps_list.rs  mod.rs  terminal_box.rs
tock-process-console/src/ui_management/pages/terminal_page/section/: mod.rs  usage.rs
tockloader/: .gitignore  Cargo.toml
tockloader-cli/: Cargo.toml
tockloader-cli/src/: cli.rs  display.rs  main.rs  serial.rs
tockloader-cli/src/interfaces/serial/: board_interface.rs
tockloader-lib/: Cargo.toml
tockloader-lib/src/: board_settings.rs  bootloader_serial.rs  connection.rs  errors.rs  kernel_attributes.rs  lib.rs  mock_probe.rs  probe_session.rs  tab.rs
tockloader-lib/src/attributes/: app_attributes.rs  attributes.rs  board_attributes.rs  decode.rs  general_attributes.rs  get_app_attributes.rs  get_board_attributes.rs  get_kernel_attributes.rs  hardware_attributes.rs  mod.rs  system_attributes.rs
tockloader-lib/src/tabs/: app_tab.rs  metadata.rs  mod.rs  tab.rs  tbff.rs  tbfh.rs
tockloader/src/: board_attributes.rs  board_settings.rs  cli.rs  errors.rs  interfaces.rs  kernel_attributes.rs  main.rs
tockloader/src/interfaces/: serial.rs  traits.rs
tockloader/src/interfaces/serial/: virtual_terminal.rs
tockloader/tbf-parser/src/: parse.rs  types.rs
tockloader/tbf-parser/tests/: parse.rs
tools/: run_clippy.sh  run_fmt_check.sh
