# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright OXIDOS AUTOMOTIVE 2024.

[package]
name = "tock-process-console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
circular-queue = "0.2.6"
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
tokio-serial = {version = "5.4.4", features = ["libudev"]}
tokio-stream = { version = "0.1.14" }
tui-term = "0.1.6"
bytes = "1.5.0"
vt100 = "0.15.2"
queues = "1.0.2"
itertools = "0.12.1"
ratatui = "0.27.0"
probe-rs = "0.24.0"

