# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright OXIDOS AUTOMOTIVE 2024.

[package]
name = "tockloader-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tokio-serial = {version = "5.4.4", features = ["libudev"]}
probe-rs = { git = "https://github.com/george-cosma/probe-rs", branch = "dev/arm-mock" }
tbf-parser = { path = "../tbf-parser"}
utf8-decode = "1.0.1"
byteorder = "1.5.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


